Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ib06a8a8e61cb568f14a78675a6b647d101f0e500

--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -4180,7 +4180,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"Рэжым навігацыі"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2-кнопачная навігацыя"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"Каб пераключыцца на іншую праграму, правядзіце пальцам уверх па кнопцы галоўнага экрана. Каб убачыць усе праграмы, правядзіце яшчэ раз. Каб вярнуцца, націсніце кнопку \"Назад\"."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Бяспека і экстранны выклік"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Фізічная бяспека і экстранныя сітуацыі"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"Экстранны выклік, медыцынская інфармацыя, абвесткі"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"Навігацыя жэстамі"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"Каб вярнуцца на галоўную старонку, правядзіце па экране пальцам знізу ўверх. Каб пераключыцца на іншую праграму, правядзіце па экране пальцам знізу ўверх, затрымайцеся, а потым адпусціце. Каб вярнуцца назад, правядзіце па экране пальцам управа ці ўлева."</string>
