--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -4018,7 +4018,7 @@
     <string name="ota_disable_automatic_update_summary" msgid="7803279951533276841">"Aplikatu eguneratzeak gailua berrabiaraztean"</string>
     <string name="usage" msgid="287782903846013936">"Erabilera"</string>
     <string name="cellular_data_usage" msgid="5874156338825285334">"Datu-konexioaren erabilera"</string>
-    <string name="app_cellular_data_usage" msgid="7603292978956033926">"Aplikazioak erabilitako datuak"</string>
+    <string name="app_cellular_data_usage" msgid="7603292978956033926">"Aplikazioen datu-erabilera"</string>
     <string name="wifi_data_usage" msgid="6868503699134605707">"Wifi-sareko datu-erabilera"</string>
     <string name="non_carrier_data_usage" msgid="6494603202578414755">"Operadorearenak ez diren datuen erabilera"</string>
     <string name="ethernet_data_usage" msgid="4552227880905679761">"Ethernet-datuen erabilera"</string>
@@ -4180,7 +4180,7 @@
     <string name="system_navigation_title" msgid="4890381153527184636">"Nabigazio modua"</string>
     <string name="swipe_up_to_switch_apps_title" msgid="6677266952021118342">"2 botoiko nabigazioa"</string>
     <string name="swipe_up_to_switch_apps_summary" msgid="1415457307836359560">"Aplikazioa aldatzeko, pasatu hatza gora Hasiera botoian. Aplikazio guztiak ikusteko, pasatu hatza gora berriro. Atzera egiteko, sakatu Atzera botoia."</string>
-    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Segurtasuna eta larrialdiak"</string>
+    <string name="emergency_settings_preference_title" msgid="6183455153241187148">"Segurtasun fisikoa eta larrialdiak"</string>
     <string name="emergency_dashboard_summary" msgid="401033951074039302">"SOS larrialdia, osasunari buruzko informazioa, alertak"</string>
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"Keinu bidezko nabigazioa"</string>
     <string name="edge_to_edge_navigation_summary" msgid="818109176611921504">"Orri nagusira joateko, pasatu hatza pantailaren behealdetik gora. Aplikazioa aldatzeko, pasatu hatza pantailaren behealdetik gora eta eduki sakatuta une batez, guztiz altxatu aurretik. Atzera egiteko, pasatu hatza pantailaren ezkerreko edo eskuineko ertzetik beste aldera."</string>
