--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -1471,7 +1471,7 @@
     <string name="reset_mobile_network_settings_title" msgid="5616713931258506842">"Setha kabusha Amasethingi Enethiwekhi Yeselula"</string>
     <string name="reset_mobile_network_settings_desc" msgid="7292636387692165727">"Lokhu kuzosetha kabusha wonke amasethingi enethiwekhi yeselula"</string>
     <string name="reset_mobile_network_settings_confirm_title" msgid="7510965634669511241">"Setha kabusha Amasethingi Enethiwekhi Yeselula?"</string>
-    <string name="reset_bluetooth_wifi_title" msgid="4113071322344697317">"Setha kabusha i-Bluetooth ne-Wi-Fi"</string>
+    <string name="reset_bluetooth_wifi_title" msgid="4113071322344697317">"Setha kabusha iBluetooth ne-Wi-Fi"</string>
     <string name="reset_bluetooth_wifi_desc" msgid="4030295669083059711">"Lokhu kuzosetha kabusha yonke i-Wi-Fi namasethingi e-Bluetooth. Awukwazi ukuhlehlisa lesi senzo."</string>
     <string name="reset_bluetooth_wifi_button_text" msgid="3974098137045963639">"Setha kabusha"</string>
     <string name="reset_bluetooth_wifi_complete_toast" msgid="5893439291030574365">"I-Bluetooth ne-Wi-Fi zisethwe kabusha"</string>
