Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I25aed55c2ff602d0c87f5dff1a89f984a568638c

--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -982,9 +982,9 @@
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturlige"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Forstærkede"</string>
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"Mættet"</string>
-    <string name="color_mode_option_automatic" msgid="2281217686509980870">"Selvjusterende"</string>
+    <string name="color_mode_option_automatic" msgid="2281217686509980870">"Adaptiv"</string>
     <string name="brightness" msgid="6216871641021779698">"Lysstyrke"</string>
-    <string name="auto_brightness_title" msgid="4239324728760986697">"Automatisk lysstyrke"</string>
+    <string name="auto_brightness_title" msgid="4239324728760986697">"Adaptiv lysstyrke"</string>
     <string name="auto_brightness_description" msgid="6807117118142381193">"Skærmens lysstyrke tilpasses automatisk på baggrund af dine omgivelser og dine aktiviteter. Du kan flytte skyderen manuelt for at hjælpe automatisk lysstyrke med at lære dine præferencer."</string>
     <string name="auto_brightness_summary_on" msgid="2748088951224387004">"Til"</string>
     <string name="auto_brightness_summary_off" msgid="8077066192887677956">"Fra"</string>
@@ -2385,7 +2385,7 @@
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"Ikke sikker"</string>
     <string name="vpn_settings_single_insecure_multiple_total" msgid="6107225844641301139">"<xliff:g id="VPN_COUNT">%d</xliff:g> er ikke sikker"</string>
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> er ikke sikker"</string>
-    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Selvjusterende forbindelse"</string>
+    <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Adaptiv forbindelse"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Forlænger batteritiden og forbedrer enhedens ydeevne ved at administrere din netværksforbindelse automatisk"</string>
     <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Til"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Fra"</string>
@@ -3127,9 +3127,9 @@
     <string name="profile_section_header_for_advanced_privacy" msgid="8385775428904838579">"Arbejdsprofil"</string>
     <string name="asst_capability_prioritizer_title" msgid="1181272430009156556">"Automatisk prioritetsniveau for notifikationer"</string>
     <string name="asst_capability_prioritizer_summary" msgid="954988212366568737">"Angiv automatisk notifikationer med lavere prioritet som Diskret"</string>
-    <string name="asst_capability_ranking_title" msgid="312998580233257581">"Automatisk rangering af notifikationer"</string>
+    <string name="asst_capability_ranking_title" msgid="312998580233257581">"Adaptiv rangering af notifikationer"</string>
     <string name="asst_capability_ranking_summary" msgid="2293524677144599450">"Ranger automatisk notifikationer efter relevans"</string>
-    <string name="asst_feedback_indicator_title" msgid="5169801869752395354">"Feedback om tilpassede notifikationer"</string>
+    <string name="asst_feedback_indicator_title" msgid="5169801869752395354">"Feedback om adaptive notifikationer"</string>
     <string name="asst_feedback_indicator_summary" msgid="5862082842073307900">"Vis justeringer af notifikationer, og vis en mulighed for at give feedback til systemet"</string>
     <string name="asst_importance_reset_title" msgid="6191265591976440115">"Nulstil vigtigheden af notifikationer"</string>
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"Nulstil brugerangivne indstillinger for vigtighed, og tillad, at notifikationsassistenten prioriterer."</string>
@@ -3253,7 +3253,7 @@
     <string name="nls_feature_read_summary" msgid="1064698238110273593">"Den kan læse dine notifikationer, herunder personlige oplysninger såsom kontakter, beskeder og billeder."</string>
     <string name="nls_feature_reply_title" msgid="7925455553821362039">"Svare på beskeder"</string>
     <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Den kan besvare beskeder og interagere med knapper i notifikationer, herunder udsættelse eller afvisning af notifikationer og besvarelse af opkald."</string>
-    <string name="nls_feature_settings_title" msgid="8208164329853194414">"Skift indstillinger"</string>
+    <string name="nls_feature_settings_title" msgid="8208164329853194414">"Skifte indstillinger"</string>
     <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Den kan aktivere eller deaktivere Forstyr ikke og ændre relaterede indstillinger."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Hvis du slår adgang til notifikationer fra for <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, slås adgangen til Forstyr ikke muligvis også fra."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Slå fra"</string>
