--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -3250,11 +3250,11 @@
     <string name="notification_listener_security_warning_summary" msgid="1131986567509818121">"Apl <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> akan dapat membaca semua pemberitahuan, termasuk maklumat peribadi seperti nama kenalan, foto dan teks mesej yang anda terima. Apl ini juga akan dapat menunda atau mengetepikan pemberitahuan atau mengambil tindakan pada butang dalam pemberitahuan, termasuk menjawab panggilan telefon. \n\nHal ini turut mengupayakan apl untuk menghidupkan atau mematikan ciri Jangan Ganggu dan menukar tetapan yang berkaitan."</string>
     <string name="nls_warning_prompt" msgid="1486887096703743841">"Apl <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g> akan dapat:"</string>
     <string name="nls_feature_read_title" msgid="7629713268744220437">"Membaca pemberitahuan anda"</string>
-    <string name="nls_feature_read_summary" msgid="1064698238110273593">"Ciri ini dapat membaca pemberitahuan anda, termasuk maklumat peribadi seperti kenalan, mesej dan foto."</string>
+    <string name="nls_feature_read_summary" msgid="1064698238110273593">"Apl ini dapat membaca pemberitahuan, termasuk maklumat peribadi seperti kenalan, mesej dan foto."</string>
     <string name="nls_feature_reply_title" msgid="7925455553821362039">"Membalas mesej"</string>
-    <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Ciri ini dapat membalas mesej dan mengambil tindakan pada butang dalam pemberitahuan, termasuk menunda atau mengetepikan pemberitahuan dan menjawab panggilan."</string>
+    <string name="nls_feature_reply_summary" msgid="4492543411395565556">"Apl ini dapat membalas mesej dan mengambil tindakan pada butang dalam pemberitahuan, termasuk menunda atau mengetepikan pemberitahuan dan menjawab panggilan."</string>
     <string name="nls_feature_settings_title" msgid="8208164329853194414">"Menukar tetapan"</string>
-    <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Ciri ini dapat menghidupkan atau mematikan ciri Jangan Ganggu dan menukar tetapan yang berkaitan."</string>
+    <string name="nls_feature_settings_summary" msgid="3770028705648985689">"Apl ini dapat menghidupkan atau mematikan ciri Jangan Ganggu dan menukar tetapan yang berkaitan."</string>
     <string name="notification_listener_disable_warning_summary" msgid="8373396293802088961">"Jika anda mematikan akses pemberitahuan untuk <xliff:g id="NOTIFICATION_LISTENER_NAME">%1$s</xliff:g>, akses Jangan Ganggu mungkin turut dimatikan."</string>
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Matikan"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Batal"</string>
