--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -1900,7 +1900,7 @@
     <string name="accessibility_button_or_gesture_title" msgid="3510075963401163529">"Gebruik knoppie of gebaar"</string>
     <string name="accessibility_button_location_title" msgid="7182107846092304942">"Ligging"</string>
     <string name="accessibility_button_size_title" msgid="5785110470538960881">"Grootte"</string>
-    <string name="accessibility_button_fade_title" msgid="8081993897680588829">"Verdof wanneer dit nie gebruik word nie"</string>
+    <string name="accessibility_button_fade_title" msgid="8081993897680588829">"Verdof wanneer nie gebruik word nie"</string>
     <string name="accessibility_button_fade_summary" msgid="7865950833524973709">"Verdof ná \'n paar sekondes sodat dit makliker is om jou skerm te sien"</string>
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Deursigtigheid wanneer nie gebruik word nie"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Deursigtig"</string>
